colocando los componentes peliculas y pruebas en la vista app.component.hatml

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -339,9 +339,11 @@
   </div>
 
  <hr />
- <!--Pruebas con componentes-->
+ 
+<!--Pruebas con componentes-->
 <mi-componente></mi-componente>
-
+<peliculas></peliculas>
+<pruebas></pruebas>
 </div>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
