agregando cabecera y footer adaptado al nuevo curso

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -342,8 +342,8 @@
  
 <!--Pruebas con componentes-->
 <mi-componente></mi-componente>
-<peliculas></peliculas>
-<pruebas></pruebas> 
+<app-cabecera></app-cabecera>
+<app-footer></app-footer>
 </div>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
