--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,20 @@
-<h1 class="container bg-dark text-white text-center my-4 py-4">ngIf show = {{show}}</h1>
+<h1 class="container bg-dark text-white text-center my-4 py-4">[ngClass]</h1>
+
 <div class="container">
-  <button class="btn btn-warning" (click)="show =! show">Acción</button>
-  <p class="text-info" *ngIf="show; else showDos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati labore rerum 
+
+  <button class="btn btn-dark mb-3" (click)="activo='primero'">Primero</button>
+  <button class="btn btn-danger mb-3" (click)="activo='segundo'">Segundo</button>
+
+  <p class="text-info d-none" [ngClass]="{'d-block':activo=='primero'}">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati labore rerum 
     consequuntur ipsum, quidem minus doloremque nihil delectus. Ipsa laboriosam hic 
-    deserunt necessitatibus. Facilis obcaecati eius vel dicta perspiciatis quisquam.</p>
+    deserunt necessitatibus. Facilis obcaecati eius vel dicta perspiciatis quisquam.
+  </p>
   
-    <ng-template #showDos>
-      <p class="text-danger">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis ab ex 
-        exercitationem, tenetur voluptatum corrupti porro unde aliquid suscipit distinctio 
-        recusandae delectus iusto, ipsa dolorem veniam vero molestias blanditiis expedita?
-      </p>  
-    </ng-template>
+  <p class="text-danger d-none" [ngClass]="{'d-block':activo=='segundo'}">
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis ab ex 
+    exercitationem, tenetur voluptatum corrupti porro unde aliquid suscipit distinctio 
+    recusandae delectus iusto, ipsa dolorem veniam vero molestias blanditiis expedita?
+  </p>  
   
- 
 </div>
